TestSuite/Syntax/Errors/DepLoop15.tjp
project prj "Loop Detector Test" "$Id" 2000-01-01 2000-01-10

task t1 "Task1" {
	task t2 "Task2" {
		start 2000-01-01
    length 1d
	  depends !t3
	}
	task t3 "Task3" {
		length 1d
		depends !t2
	}
}

